# SAUVC-JETSON

./: .gitignore  README.md
decision_interface/: CMakeLists.txt  package.xml
decision_interface/msg/: FSMStatus.msg
fsm_decision/: ACTION_DEVELOPMENT_GUIDE.md  CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
fsm_decision/fsm_decision/: fsm_node.py  mission_loader.py
fsm_decision/fsm_decision/actions/: action_base.py  hover.py  searchtarget.py
fsm_decision/fsm_decision/missions/: test.yaml
isaac_ros_common/: .gitignore
isaac_ros_common/docker/: Dockerfile.orca25  Dockerfile.realsense
isaac_ros_common/docker/scripts/: entrypoint_orca25.sh
isaac_ros_common/scripts/: run_dev.sh
isaac_ros_yolov8/launch/: isaac_ros_yolov8_visualize_gazebo.launch.py  yolov8_tensor_rt_gazebo.launch.py
isaac_ros_yolov8/scripts/: isaac_ros_yolov8_visualizer.py
isaac_ros_yolov8/src/: yolov8_decoder_node.cpp
